syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";  
import "Protos/messages.proto" ;


option csharp_namespace = "grpclienttest";
package secondvariety;

service GGetTokensServ {
  rpc GetToken(GGetTokenClaims) returns(GClaim);
}

